AboutHeader fixed with z-index

--- a/components/HOC/withTransition.module.css
+++ b/components/HOC/withTransition.module.css
@@ -1,3 +1,7 @@
+.seethrough {
+	pointer-events: none;
+}
+
 .slideIn {
 	position: fixed;
 	top: 0;
